--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,3 +1,135 @@
-body{
-    padding:10px;
+html {
+    box-sizing: border-box;
+    font-size: 100%
+}
+
+*, *::after, *::before {
+    box-sizing: inherit;
+}
+
+body {
+    margin: 0;
+    line-height: 1.5;
+    text-align: center;
+    font-family: 'Montserrat', sans-serif;
+    color: #ffffdd;
+}
+
+h1, h2, h3, h4, h5, h6, p {
+    margin: 0;
+    padding: 0;
+}
+
+h1{
+    font-size:2.2rem;
+}
+h2{
+    font-size: 2em;
+}
+h3{
+    font-size: 1.6rem;
+}
+h4{
+    font-size: 1.4rem;
+}
+p{
+    font-size: 1.1rem;
+}
+
+
+#main{
+    height: 100vh;
+    display:grid;
+    grid-template-columns: 1fr;
+    grid-template-rows:17vh 22vh 61vh;
+    grid-template-areas: 
+    'header'
+    'data'
+    'weather'
+    ;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    /* background-color: linear-gradient(0deg, #000008 30%, #fffff4 100%); */
+}
+
+#header{
+    grid-area: header;
+    align-self: end;
+    padding-bottom: 20px;
+    
+}
+
+#data{
+    grid-area: data;
+}
+
+#form{
+    padding-top:5px;
+    height: 20vh;
+    display:flex;
+    flex-direction: column;
+    gap:5px;
+    align-items: center;
+    font-size:1.5rem;
+}
+
+#location{
+    height: 36px;
+    width: 250px;
+    font-size:1.2rem;
+    border-radius: 6px;
+    padding: 5px 10px;
+    transition: box-shadow 100ms ease-in, border 100ms ease-in, background-color 100ms ease-in;
+    border: 2px solid #dee1e2;
+    color: rgb(14, 14, 16);
+    background: #dee1e2;
+    display: block;
+    
+}
+
+#location:hover {
+    border-color: #ccc;
+}
+#location:focus{
+    border-color: #9147ff;
+    background: #fff;
+}
+
+#getWeather{
+
+    width:250px;
+    height: 36px;
+    display: inline-block;
+    outline: none;
+    cursor: pointer;
+    font-weight: 500;
+    border-radius: 3px;
+    padding: 0 16px;
+    border-radius: 4px;
+    color: #fff;
+    background: #6200ee;
+    line-height: 1.15;
+    font-size: 14px;
+    word-spacing: 0px;
+    letter-spacing: .0892857143em;
+    text-decoration: none;
+    text-transform: uppercase;
+    min-width: 64px;
+    border: none;
+    text-align: center;
+    box-shadow: 0px 3px 1px -2px rgb(0 0 0 / 20%), 0px 2px 2px 0px rgb(0 0 0 / 14%), 0px 1px 5px 0px rgb(0 0 0 / 12%);
+    transition: box-shadow 280ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+#getWeather:hover {
+    background: rgb(98, 0, 238);
+    box-shadow: 0px 2px 4px -1px rgb(0 0 0 / 20%), 0px 4px 5px 0px rgb(0 0 0 / 14%), 0px 1px 10px 0px rgb(0 0 0 / 12%);
+}
+
+#content{
+    grid-area: weather;
+    margin: 5vh 40vw;
+    color:black;
+    background-color:white;
+    box-shadow: 0 25.6px 57.6px 0 rgb(0 0 0 / 22%), 0 4.8px 14.4px 0 rgb(0 0 0 / 18%);
 }
