--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -131,5 +131,6 @@ p{
     margin: 5vh 40vw;
     color:black;
     background-color:white;
+    border-radius:4px;
     box-shadow: 0 25.6px 57.6px 0 rgb(0 0 0 / 22%), 0 4.8px 14.4px 0 rgb(0 0 0 / 18%);
 }
